--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#BBDEFB</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="colorBottomAppBar">#2E2E2E</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorTextBlack">@color/colorBottomAppBar</color>
+    <color name="colorBlack">#000000</color>
+    <color name="cardview_dark">#FF424242</color>
+    <color name="cardview_gray">#d1d1d1</color>
+    <color name="cardview_orange_head">#f5a44d</color>
+    <color name="shrine_pink_100">#F8DCD2</color>
+
+    <color name="shrine_pink_80">#897370</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="colorBottomAppBarText">#66000000</color>
 </resources>
